fix(minesweeper): simplify Adj-SID availability guard semantics